# LocalIA

./: .gitignore  settings.gradle.kts  setup_llama.sh
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  llama_jni.cpp
app/src/main/java/com/arcadiapps/localIA/: LocalIAApp.kt  MainActivity.kt
app/src/main/java/com/arcadiapps/localIA/data/catalog/: ModelCatalog.kt
app/src/main/java/com/arcadiapps/localIA/data/dao/: AIModelDao.kt  ChatMessageDao.kt  ChatSessionDao.kt
app/src/main/java/com/arcadiapps/localIA/data/db/: AppDatabase.kt  Converters.kt
app/src/main/java/com/arcadiapps/localIA/data/model/: AIModel.kt  ChatMessage.kt  ChatSession.kt
app/src/main/java/com/arcadiapps/localIA/data/repository/: ChatRepository.kt  ModelRepository.kt
app/src/main/java/com/arcadiapps/localIA/di/: AppModule.kt
app/src/main/java/com/arcadiapps/localIA/inference/: EngineManager.kt  InferenceEngine.kt  LlamaCppEngine.kt  MediaPipeTextEngine.kt
app/src/main/java/com/arcadiapps/localIA/ui/chat/: ChatScreen.kt  ChatViewModel.kt  ImagePicker.kt
app/src/main/java/com/arcadiapps/localIA/ui/home/: HomeScreen.kt
app/src/main/java/com/arcadiapps/localIA/ui/models/: ImportModelScreen.kt  ModelsScreen.kt  ModelsViewModel.kt
app/src/main/java/com/arcadiapps/localIA/ui/navigation/: NavGraph.kt
app/src/main/java/com/arcadiapps/localIA/ui/settings/: SettingsDataSource.kt  SettingsScreen.kt  SettingsViewModel.kt
app/src/main/java/com/arcadiapps/localIA/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/com/arcadiapps/localIA/worker/: ModelDownloadWorker.kt
app/src/main/res/values/: strings.xml  themes.xml
gradle/: libs.versions.toml
